fix: skills spacing too much reduced to lower value;

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11393,7 +11393,7 @@ textarea.form-control-lg {
 .skills__category {
   font-weight: 500;
   padding: 0 0.375rem;
-  width: 200px;
+  width: 230px;
 }
 .skills__list {
   font-weight: 600;
@@ -11404,6 +11404,7 @@ textarea.form-control-lg {
 .skills .section__item {
   display: flex;
   font-size: 0.875rem;
+  line-height: 1;
 }
 .skills .section__item:not(:last-child) {
   padding-bottom: 0.625rem;
