--- a/assets/scss/layout/_content.scss
+++ b/assets/scss/layout/_content.scss
@@ -159,7 +159,7 @@
   &__category {
     font-weight: 500;
     padding: 0 0.375rem;
-    width: 200px;
+    width: 230px;
   }
 
   &__list {
@@ -173,6 +173,7 @@
     &__item {
       display: flex;
       font-size: 0.875rem;
+      line-height: 1;
 
       &:not(:last-child) {
         padding-bottom: 0.625rem;
